added get GetUserWithOrders query
